# final-project-level3-nlp-11

./: .gitignore  Google_Review_Preprocessing.ipynb  Google_Review_Preprocessing.py  README.md  Readme.md  install.sh  scrapper.py  tour_spot_name.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue.md
code/: .env.template
code/BE/: .gitignore  README.md  dense.py  logger.py  main.py  pyproject.toml
code/DATA_GEN/: README.md  main.py  split_chunks.py  val_query.py
code/DATA_GEN/config/: config.conf
code/DATA_GEN/src/: Cafe.ipynb  Cafe_Crawling.py  blog.py  config.conf
code/DATA_GEN/src/crawling/: Cafe_Crawling.py  blog_crawling.py  cafe_crawling.py  scrapper.py
code/DATA_GEN/src/mk_pair/: mk_pair.py
code/DATA_GEN/src/preprocess/: preprocess_blog.py  preprocess_google.py
code/DATA_GEN/src/utils/: blog_parser.py  replace_text.py  request_blog.py
code/FE/: README.md
code/FE/src/: app.py
code/FE/src/api/: index.py  model.py  survey.py  tour_api.py
code/FE/src/components/: header.py  main_list_item.py
code/FE/src/model/: dense.py  (+3 more)
code/MODEL/: README.md
code/MODEL/DAPT/: DAPT.sh  json_data_to_text.py  run_mlm.py
code/MODEL/dense/: dataset.py  requirement.sh  retrieval.py  utils.py
code/MODEL/sparse/: elastic_search.py  elastic_search.sh
code/preprocess/: preprocess_reviews.ipynb
dense/: dense_dataset.py  dense_inference.py  dense_model.py  dense_train.py  func.py  inference.sh  test_train.py  train.sh
etc/: my_stop_dic.txt
install/: install_requirements.sh
sparse/: retrieval.py  retrieval_similar.py
(+12 files in other folders)
